--- a/blog.html
+++ b/blog.html
@@ -3,23 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KSA Jobs – Blog</title>
+  <title>KSA Jobs – Detailed Blog</title>
 </head>
 <body>
   <h1>Jobs & Salaries in Saudi Arabia 2025 – Complete Guide</h1>
-  <p>Saudi Arabia remains a top destination for workers. This blog explains job types, salary ranges, living costs, and tips for workers planning to come to KSA.</p>
 
-  <h2>Popular Jobs & Salaries</h2>
+  <p>Saudi Arabia continues to attract workers from Pakistan, India, Bangladesh, Nepal, and other countries due to its tax-free income, high demand for skilled and unskilled labor, and safe working environment. This blog provides a detailed guide on job types, salaries, cost of living, and tips for expats.</p>
+
+  <h2>1. Why Saudi Arabia is a Top Destination for Workers</h2>
   <ul>
-    <li>General Labor: 900–1200 SAR</li>
-    <li>Technicians: 1800–2500 SAR</li>
-    <li>Drivers: 1800–3500 SAR</li>
-    <li>Construction Workers: 1600–2400 SAR</li>
-    <li>Salesman/Cashier: 1600–2000 SAR</li>
+    <li>High demand for foreign workers</li>
+    <li>Tax-free salary</li>
+    <li>Safe and regulated working environment</li>
+    <li>Career growth opportunities</li>
+    <li>Benefits like accommodation, transport, and medical insurance</li>
   </ul>
 
-  <h2>Cost of Living</h2>
-  <p>Food: 250–450 SAR · Room: 300–600 SAR · Transport: 80–150 SAR · Internet: 50–100 SAR</p>
+  <h2>2. Popular Jobs & Average Salaries</h2>
+  <table border="1" cellpadding="8" cellspacing="0">
+    <tr>
+      <th>Job</th>
+      <th>Salary Range (SAR)</th>
+      <th>Notes</th>
+    </tr>
+    <tr><td>General Labor / Helper</td><td>900 – 1,200</td><td>Best for new workers entering KSA</td></tr>
+    <tr><td>Technicians (Electrician, Plumber, AC)</td><td>1,800 – 2,500</td><td>Skilled labor earns more due to high demand</td></tr>
+    <tr><td>Drivers (Light & Heavy Vehicles)</td><td>1,800 – 3,500</td><td>Experience + Saudi license increases salary</td></tr>
+    <tr><td>Construction Workers (Mason, Carpenter, Steel)</td><td>1,600 – 2,400</td><td>Overtime often included</td></tr>
+    <tr><td>Salesman / Cashier</td><td>1,600 – 2,000</td><td>May include transport or food allowances</td></tr>
+    <tr><td>Housekeeping / Cleaning</td><td>1,200 – 1,600</td><td>Hotels often provide accommodation</td></tr>
+    <tr><td>Office Assistant / Admin</td><td>2,000 – 3,000</td><td>Requires basic English & computer skills</td></tr>
+    <tr><td>Factory Jobs (Operator, Production)</td><td>1,600 – 2,200</td><td>Shift-based work, often with overtime</td></tr>
+  </table>
+
+  <h2>3. Factors Affecting Salary</h2>
+  <ul>
+    <li>Company size and industry type</li>
+    <li>Experience and skill level</li>
+    <li>City location (Riyadh & Jeddah typically pay more)</li>
+    <li>Working hours, shifts, and overtime opportunities</li>
+  </ul>
+
+  <h2>4. Cost of Living in Saudi Arabia (2025)</h2>
+  <ul>
+    <li>Food: 250–450 SAR/month</li>
+    <li>Shared Room: 300–600 SAR/month</li>
+    <li>Transport: 80–150 SAR/month</li>
+    <li>Mobile & Internet: 50–100 SAR/month</li>
+  </ul>
+  <p>Providing accommodation and transport by the employer can save 40–60% of expenses.</p>
+
+  <h2>5. Who Should Move to Saudi Arabia?</h2>
+  <p>Ideal candidates:</p>
+  <ul>
+    <li>Workers seeking tax-free income</li>
+    <li>People wanting to upgrade skills</li>
+    <li>Those seeking a safe and stable work environment</li>
+    <li>Individuals looking to save money for family/future</li>
+  </ul>
+  <p>Not suitable if expecting luxury lifestyle on entry-level jobs, or quick promotions without proper skills.</p>
+
+  <h2>6. Tips for Workers Coming to Saudi Arabia</h2>
+  <ul>
+    <li>Learn a basic skill before arriving</li>
+    <li>Improve English for better job opportunities</li>
+    <li>Apply only via verified agents or companies</li>
+    <li>Confirm contract details (salary, accommodation, transport, food)</li>
+    <li>Understand iqama rules and avoid illegal work</li>
+    <li>Plan your budget based on real living costs</li>
+  </ul>
+
+  <h2>7. Final Thoughts</h2>
+  <p>This guide, along with the video, provides a realistic picture of jobs, salaries, and living costs in Saudi Arabia for 2025. Proper planning and research help expats maximize savings and secure the right job opportunity.</p>
 
   <a href="index.html">← Back to Home</a>
 </body>
